@@ -155,9 +155,10 @@ Input::open (const gchar *uri)
 
 	if (doc != NULL) {
 		repr = sp_document_repr_root(doc);
+                gboolean saved = sp_document_get_undo_sensitive(doc);
 		sp_document_set_undo_sensitive (doc, FALSE);
 		sp_repr_set_attr(repr, "inkscape:output_extension", output_extension);
-		sp_document_set_undo_sensitive (doc, TRUE);
+		sp_document_set_undo_sensitive (doc, saved);
 	}
 
 	return doc;
