@@ -112,9 +112,10 @@ open(Extension *key, gchar const *filename)
     /* This kinda overkill as most of these are already set, but I want
        to make sure for this release -- TJG */
     SPRepr *repr = sp_document_repr_root(doc);
+    gboolean saved = sp_document_get_undo_sensitive(doc);
     sp_document_set_undo_sensitive(doc, FALSE);
     sp_repr_set_attr(repr, "sodipodi:modified", NULL);
-    sp_document_set_undo_sensitive(doc, TRUE);
+    sp_document_set_undo_sensitive(doc, saved);
 
     sp_document_set_uri(doc, filename);
 
